<resources>
    <string name="app_name">Emir</string>
    <string name="guitar_tuner_9000">Guitar Tuner 9000</string>
    <string name="select_the_insturment">Select the Insturment:</string>
    <string name="instrument"><u>Guitar</u></string>
    <string name="select_tunning">Select Tunning:</string>
    <string name="guitar_strings">Standard 6 string</string>
    <string name="e_string">E string</string>
    <string name="fav">Favorite</string>
    <string name="downloads">Downloads</string>
    <string name="home">Home</string>
    <string name="flag">Flag</string>
    <string name="settings">Settings</string>
    <string name="ee_string">e string</string>
    <string name="b_string">B string</string>
    <string name="g_string">G string</string>
    <string name="d_string">D string</string>
    <string name="a_string">A string</string>
    <string name="learn">Learn</string>
    <string name="chord_progressions">Chord progressions</string>
    <string name="chord_library">Chord Library</string>
    <string name="general">General</string>
    <string name="on"><u>ON</u></string>
    <string name="off"><u>OFF</u></string>
    <string name="en"><u>English</u></string>
    <string name="tuning">Tuning</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="pro_accuracy">Pro Accuracy</string>
    <string name="left_handed_mode">Left handed mode</string>
    <string name="language">Language</string>
    <string name="songs">Songs</string>
    <string name="instument_tunnings">Instument Tunnings</string>
    <string name="chords">Chords</string>
    <string name="back">back</string>
    <string name="basic_chrods">Basic Chrods</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="d">D</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="e">E</string>
    <string name="select_the_instrument">Select the instrument</string>
    <string name="all_instruments">All instruments</string>
    <string name="guitar">Guitar</string>
    <string name="ukulele">Ukulele</string>
    <string name="violin_family">Violin family</string>
    <string name="mandolin">Mandolin</string>
    <string name="banjo">Banjo</string>
    <string name="bass">Bass</string>
    <string name="custom_tuning">Custom tuning</string>
    <string name="select_tuning">Select tuning</string>
    <string name="x3">3x3</string>
    <string name="six_line">6 in line</string>
    <string name="standard_tuning">Standard tuning:</string>
    <string name="dadgad">DADGAD:</string>
    <string name="low_d">Low D:</string>
    <string name="drop_d">Drop D:</string>
    <string name="custom_tuning_dots">Custom tuning:</string>
    <string name="ear_trainer">Ear trainer</string>
    <string name="learn_chords">Learn chords</string>
    <string name="strumming_patterns">Strumming patterns</string>
    <string name="openchords">Openchords</string>
    <string name="from7">1/7</string>
    <string name="stars">stars</string>
    <string name="power_chords">Power chords</string>
    <string name="sevens">7th chords</string>
    <string name="g_fam">G-family chords</string>
    <string name="maj">maj7th chords</string>
    <string name="extra_power">Extra Power chords</string>
    <string name="a_shape_chords">A shape chords</string>
    <string name="e_shape_chords">E shape chords</string>
    <string name="a_e_am7_dm">A, E, Am7, Dm</string>
    <string name="g5_d5_b5_d5">G5, D5, B5, D5</string>
    <string name="g_cadd7_em7_am7">G, Cadd7, Em7, Am7</string>
    <string name="g7_d7_b7_d7">G7, D7, B7, D7</string>
    <string name="level">level</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="custom_chord_game">Custom chord game</string>
    <string name="basic_chords">4 Basic chords</string>
    <string name="maj7th_chords">maj7th chords</string>
</resources>