<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_name_tb"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="230dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/guitar_tuner_9000"
                android:textColor="@color/blue"
                android:textSize="36sp"
                android:fontFamily="@font/quicksand_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line_after_tb"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_tb"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/instrument_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_after_tb"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:text="@string/select_the_insturment"
        android:textColor="@color/blue"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/instrument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line_after_tb"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/instrument"
        android:textColor="@color/blue"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"/>

    <View
        android:id="@+id/line_after_txt"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instrument_txt"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/select_tuning"
        android:layout_marginTop="30dp"
        android:layout_width="270dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/line_after_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_tunning"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="14sp"
            android:textColor="@color/blue"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guitar_strings"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="24sp"
            android:textColor="@color/blue"/>
    </LinearLayout>

    <View
        android:id="@+id/middle_line"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_tuning"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/e_string"
        android:layout_width="285dp"
        android:layout_height="30dp"
        android:text="@string/e_string"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle_line"
        android:textColor="@color/blue"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"
        android:background="@drawable/shape1"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/a_string"
        android:layout_width="285dp"
        android:layout_height="30dp"
        android:text="@string/a_string"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e_string"
        android:textColor="@color/blue"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"
        android:background="@drawable/shape1"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/d_string"
        android:layout_width="285dp"
        android:layout_height="30dp"
        android:text="@string/d_string"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/a_string"
        android:textColor="@color/blue"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"
        android:background="@drawable/shape1"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/g_string"
        android:layout_width="285dp"
        android:layout_height="30dp"
        android:text="@string/g_string"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/d_string"
        android:textColor="@color/blue"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"
        android:background="@drawable/shape1"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/b_string"
        android:layout_width="285dp"
        android:layout_height="30dp"
        android:text="@string/b_string"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/g_string"
        android:textColor="@color/blue"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"
        android:background="@drawable/shape1"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/e_string_mini"
        android:layout_width="285dp"
        android:layout_height="30dp"
        android:text="@string/ee_string"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_string"
        android:textColor="@color/blue"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"
        android:background="@drawable/shape1"/>

    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/darker_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu"
        android:background="@color/dark1"/>
</androidx.constraintlayout.widget.ConstraintLayout>