<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".Tuning">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_name_tb"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:contentDescription="@string/back"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/select_tuning"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/x3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/line6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_tb"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/x3"
            android:src="@drawable/on_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/x3"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line6"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/x3"
        app:layout_constraintTop_toBottomOf="@id/app_name_tb"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/x3"
            android:src="@drawable/off_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/six_line"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/guitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/guitar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/x3" />

    <TextView
        android:id="@+id/standard"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/standard_tuning"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guitar" />

    <ImageView
        android:id="@+id/standard_img"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/tuning"
        android:src="@drawable/standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guitar" />

    <TextView
        android:id="@+id/dadgad"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/dadgad"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/standard" />

    <ImageView
        android:id="@+id/dadgad_img"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/tuning"
        android:src="@drawable/dadgad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/standard_img" />

    <TextView
        android:id="@+id/low_d"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/low_d"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dadgad" />

    <ImageView
        android:id="@+id/low_d_img"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/tuning"
        android:src="@drawable/low_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dadgad_img" />

    <TextView
        android:id="@+id/drop_d"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/drop_d"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/low_d" />

    <ImageView
        android:id="@+id/drop_d_img"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/tuning"
        android:src="@drawable/drop_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/low_d_img" />

    <TextView
        android:id="@+id/bass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/bass"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drop_d" />

    <TextView
        android:id="@+id/standard_bass"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/standard_tuning"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bass" />

    <ImageView
        android:id="@+id/standard_bass_img"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/tuning"
        android:src="@drawable/standard_bass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bass" />

    <TextView
        android:id="@+id/custom"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/custom_tuning_dots"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/standard_bass" />

    <ImageView
        android:id="@+id/custom_img"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/tuning"
        android:src="@drawable/standard_bass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/standard_bass_img" />

    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:background="@color/darker_blue"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />
</androidx.constraintlayout.widget.ConstraintLayout>